[package]
name = "vueko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Nuclide = "0.2.1"
clap = { version = "4.4.18", features = ["derive"] }
derive_more = "0.99.17"
smart-default = "0.7.1"
thiserror = "1.0.56"

# source: https://stackoverflow.com/a/54842093
[profile.lowsize]
inherits = "release"
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "vueko"
